--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
+
 body {
   margin: 0;
-  font-family: sans-serif;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 500;
+}
+
+button {
+  font-size: 12px;
+  border-radius: 4px;
+  font-weight: 600;
+  border: 1px solid rgb(223, 225, 228);
+  user-select: none;
+  font-family: inherit;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 1px 4px;
+  color: rgb(60, 65, 73);
+  padding: 4px 8px;
+  background-color: white;
+
+  transition: background-color .3s ease, border-color .3s ease, color .3s ease;
+}
+
+button:hover {
+  background-color: rgb(244, 245, 248);
+  border-color: rgb(223, 225, 228);
+}
+
+p {
+  margin: 0;
 }
