--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -5,6 +5,7 @@ body {
   font-family: 'Nunito', sans-serif;
   font-weight: 500;
   box-sizing: border-box;
+  background-color: #eee;
 }
 
 button:not(.no-styles) {
@@ -32,7 +33,16 @@ button:not(.no-styles) {
 }
 
 a:not(.no-styles) {
-  color: #128DC4;
+  color: theme('colors.primary');
   text-decoration: underline;
   cursor: pointer;
+}
+
+p {
+  font-size: 15px;
+
+  &.label {
+    font-size: 12px;
+    color: #777;
+  }
 }
