--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -10,11 +10,11 @@ body {
 
 button:not(.no-styles) {
   font-size: 12px;
+  user-select: none;
+  font-family: inherit;
   border-radius: 4px;
   font-weight: 600;
   border: 1px solid rgb(223, 225, 228);
-  user-select: none;
-  font-family: inherit;
   box-shadow: rgba(0, 0, 0, 0.09) 0px 1px 4px;
   color: rgb(60, 65, 73);
   padding: 4px 8px;
@@ -44,5 +44,23 @@ p {
   &.label {
     font-size: 12px;
     color: #777;
+  }
+}
+
+input:not(.no-styles) {
+  font-family: inherit;
+  border-radius: 8px;
+  font-size: 15px;
+  font-weight: 600;
+  border: 1px solid rgb(223, 225, 228);
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 1px 4px;
+  color: rgb(60, 65, 73);
+  padding: 8px;
+  background-color: white;
+  
+  transition: box-shadow .3s ease;
+  &:focus {
+    outline: none;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 4px 16px;
   }
 }
