feat(fe): style navbar
Co-authored-by: JLi2007 <JLi2007@users.noreply.github.com>
Co-authored-by: Swimmerboi1 <Swimmerboi1@users.noreply.github.com>

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -8,7 +8,7 @@ body {
   font-family: 'Nunito', sans-serif;
   font-weight: 500;
   box-sizing: border-box;
-  background-color: #eee;
+  background-color: #fff;
 }
 
 button:not(.no-styles) {
