feat(fe): dynamically generate nav links

--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -4,6 +4,9 @@
       color: black;
     }
   }
+  &:hover {
+    background-color: #e2e8f0;
+  }
   &.active {
     background-color: #e2e8f0;
     color: #155e75;
